# embassy

embassy-nrf/: Cargo.toml
embassy-nrf/src/: lib.rs
embassy-nrf/src/radio/: mod.rs
embassy-nrf/src/radio/esb/: esb_config.rs  esb_packet.rs  esb_radio.rs  esb_state.rs  mod.rs
embassy-rp/: Cargo.toml
embassy-rp/src/: i2c.rs
embassy-stm32/: Cargo.toml
embassy-stm32/src/i2c/: v2.rs  v2slave.rs
embassy-stm32/src/timer/: low_level.rs  simple_pwm.rs
examples/nrf52840/: Cargo.toml  memory.x
examples/nrf52840/.cargo/: config.toml
