[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "embassy-nrf52840-examples"
version = "0.1.0"

[dependencies]
embassy-executor = {version = "0.5.0", path = "../../embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-futures = {version = "0.1.0", path = "../../embassy-futures"}
embassy-net = {version = "0.4.0", path = "../../embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"]}
embassy-net-enc28j60 = {version = "0.1.0", path = "../../embassy-net-enc28j60", features = ["defmt"]}
embassy-net-esp-hosted = {version = "0.1.0", path = "../../embassy-net-esp-hosted", features = ["defmt"]}
embassy-nrf = {version = "0.1.0", path = "../../embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nrf-esb"]}
embassy-sync = {version = "0.5.0", path = "../../embassy-sync", features = ["defmt"]}
embassy-time = {version = "0.3.0", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-usb = {version = "0.2.0", path = "../../embassy-usb", features = ["defmt"]}
embassy-usb-logger = {version = "0.1.0", path = "../../embassy-usb-logger"}
embedded-io = {version = "0.6.0", features = ["defmt-03"]}
embedded-io-async = {version = "0.6.1", features = ["defmt-03"]}

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = {version = "0.7.6", features = ["inline-asm", "critical-section-single-core"]}
cortex-m-rt = "0.7.0"
embedded-hal = {version = "1.0"}
embedded-hal-async = {version = "1.0"}
embedded-hal-bus = {version = "0.1", features = ["async"]}
embedded-storage = "0.3.1"
fixed = "1.10.0"
generic-array = {version = "1.0.0"}
log = {version = "0.4.14"}

microfft = "0.5.0"
num-integer = {version = "0.1.45", default-features = false}
panic-probe = {version = "0.3", features = ["print-defmt"]}
rand = {version = "0.8.4", default-features = false}
serde = {version = "1.0.136", default-features = false}
static_cell = {version = "2"}
usbd-hid = "0.7.0"

[profile.release]
debug = 2
